syntax = "proto3";
package fx.gravity.crosschain.v1;

option go_package = "github.com/functionx/fx-core/x/crosschain/types";

// GenesisState struct
message GenesisState {
}
